--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-.idea/
-venv/
-__pycache__/
-private_settings.py
-token.txt
+db.sqlite3
+db.sqlite3-journal
+main/private_settings.py
+lingvo/token.txt
